--- a/CustomRPC/About.my.resx
+++ b/CustomRPC/About.my.resx
@@ -132,6 +132,6 @@
     <value>ပိတ်ပါ</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>အကြောင်းအရာ</value>
+    <value>CustomRPအကြောင်း</value>
   </data>
 </root>
