--- a/CustomRPC/ErrorReportViewer.my.resx
+++ b/CustomRPC/ErrorReportViewer.my.resx
@@ -117,10 +117,23 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="richTextBoxReport.Location" type="System.Drawing.Point, System.Drawing">
+    <value>13, 40</value>
+  </data>
+  <data name="richTextBoxReport.Size" type="System.Drawing.Size, System.Drawing">
+    <value>358, 280</value>
+  </data>
+  <data name="labelInfo.Size" type="System.Drawing.Size, System.Drawing">
+    <value>360, 21</value>
+  </data>
   <data name="labelInfo.Text" xml:space="preserve">
-    <value>CustomRP သည် အောက်ပါမွမ်းမံထားသောခြွင်းချက်ကြောင့် ယခင် session တွင် crash သွားပါသည်:</value>
+    <value>CustomRP သည် ယခင် session တွင် crash သွားပါသည်:</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>အမှားအယွင်းအစီရင်ခံစာ</value>
+    <value>Error ကို Report ပါ</value>
+  </data>
+  <data name="buttonOK.Text" xml:space="preserve">
+    <value>OK</value>
   </data>
 </root>
