--- a/CustomRPC/Strings.my.resx
+++ b/CustomRPC/Strings.my.resx
@@ -124,12 +124,12 @@
     <value>ID ဖော်ပြထားခြင်းမရှိပါ!</value>
   </data>
   <data name="errorUpdateFailed" xml:space="preserve">
-    <value>Update တစ်ခုကို ဒေါင်းလုဒ်လုပ်ခြင်း သို့မဟုတ် ထည့်သွင်းခြင်းတွင် အမှားအယွင်းရှိခဲ့ပါသည်။
+    <value>Update ကို ဒေါင်းလုဒ်လုပ်ခြင်း တွင် error ရှိခဲ့ပါသည်။
 ထပ်မံကြိုးစားရန် "Yes" ကိုနှိပ်ပါ။
 ကိုယ်တိုင် Download လုပ်ရန် "No" ကိုနှိပ်ပါ။</value>
   </data>
   <data name="firstTimeRun" xml:space="preserve">
-    <value>ပထမအကြိမ် Run ပါ</value>
+    <value>အကူအညီလိုပါသလား?</value>
   </data>
   <data name="firstTimeRunText" xml:space="preserve">
     <value>လက်စွဲစာအုပ်ကို ဖွင့်လိုပါသလား?
@@ -139,7 +139,7 @@ Help -&gt; Manual ကိုဖွင့်ပါ သို့မဟုတ် F1 
     <value>သတင်းအချက်အလက် များ</value>
   </data>
   <data name="statusConnected" xml:space="preserve">
-    <value>ချိတ်ဆက်ထားသည်</value>
+    <value>ချိတ်ဆက်ထားပါသည်</value>
   </data>
   <data name="statusConnecting" xml:space="preserve">
     <value>ချိတ်ဆက်နေသည်...</value>
@@ -148,7 +148,7 @@ Help -&gt; Manual ကိုဖွင့်ပါ သို့မဟုတ် F1 
     <value>ချိတ်ဆက်မှု မအောင်မြင်ပါ ( Discord ဖွင့်ထားပါသလား )</value>
   </data>
   <data name="statusDisconnected" xml:space="preserve">
-    <value>အဆက်ပြတ်သွားပါ ပြီ</value>
+    <value>ချိတ်ဆက်ပြတ်သွားပါ ပြီ</value>
   </data>
   <data name="statusError" xml:space="preserve">
     <value>ချိတ်ဆက်မှု Error ( ID မှားနေပါသလား? )</value>
@@ -163,19 +163,25 @@ Help -&gt; Manual ကိုဖွင့်ပါ သို့မဟုတ် F1 
     <value>Update အသစ်များမတွေ့ပါ!</value>
   </data>
   <data name="errorCorruptSettings" xml:space="preserve">
-    <value>File များ ပျက်စီးနေသည်.
-File များကို ပြန်လည်ပြုပြင်ရန် Yes ကိုနှိပ်ပါ၊ ထွက်ရန် No ကိုနှိပ်ပါ.</value>
+    <value>Files များ ပျက်စီးနေသည်.
+Files များကို ပြန်လည်ပြုပြင်ရန် Yes ကိုနှိပ်ပါ၊ ထွက်ရန် No ကိုနှိပ်ပါ.</value>
   </data>
   <data name="errorInvalidPresetFile" xml:space="preserve">
-    <value>ကြိုတင်သတ်မှတ်မှုကို ထည့်သွင်း၍မရပါ။ file ပျောက်ဆုံးနေသည်၊ ပျက်စီးနေသည် သို့မဟုတ် မှန်ကန်စွာ format မချထားပါ။</value>
+    <value>Data ကို ထည့်လို့မရပါ။ file သည် ပျောက်ဆုံးနေ၊ ပျက်စီးနေ သို့မဟုတ် မှန်ကန်စွာ format မချထားပါ။</value>
   </data>
   <data name="askAnalyticsConsent" xml:space="preserve">
     <value>သင့်အသုံးပြုမှုစိစစ်ချက်ကို ဆော့ဖ်ဝဲရေးသားသူထံ ပေးပို့ရန် သင်ခွင့်ပြုပါသလား</value>
   </data>
   <data name="errorSavingSettings" xml:space="preserve">
-    <value>ဆက်တင်များကို သိမ်းဆည်းနေစဉ် အမှားအယွင်းတစ်ခု ဖြစ်ပေါ်ခဲ့ပါသည်:</value>
+    <value>Settings များကို သိမ်းဆည်းနေစဉ် error တစ်ခု ဖြစ်ပေါ်ခဲ့ပါသည်:</value>
   </data>
   <data name="errorLoadingAssembly" xml:space="preserve">
-    <value>ကျေးဇူးပြု၍ သင်၏ Antivirus ခြွင်းချက်များသို့ "{0}" လမ်းကြောင်းကို ထည့်ပါ။ ဤ error ဆက်လက်ရှိနေပါက CustomRP ကို ​​ပြန်လည်ထည့်သွင်းပါ.</value>
+    <value>ကျေးဇူးပြု၍ သင်၏ Antivirus ခြွင်းချက်များသို့ "{0}"ကို ထည့်ပေးပါ။ ဤ error ဆက်လက်ရှိနေပါက CustomRP ကို ​​ပြန်လည် install ပါ</value>
+  </data>
+  <data name="errorInvalidImageURL" xml:space="preserve">
+    <value>Image URL ကရှည်နေပါသည်!</value>
+  </data>
+  <data name="errorStartupShortcut" xml:space="preserve">
+    <value>Shortcut ကို ထည့်ဖို့ ဒါမှမဟုတ် ဖယ်ရှားဖို့ fail ပါတယ်:</value>
   </data>
 </root>
