--- a/CustomRPC/MainForm.fi.resx
+++ b/CustomRPC/MainForm.fi.resx
@@ -472,6 +472,6 @@ Voimaantulo edellyttää, että molempien kenttien arvo on suurempi kuin 0.</val
     <value>/</value>
   </data>
   <data name="faqToolStripMenuItem.Text" xml:space="preserve">
-    <value>Usein Kysyttyjä Kysymyksiä</value>
+    <value>Usein kysytyt kysymykset</value>
   </data>
 </root>
