--- a/CustomRPC/UpdatePrompt.bg.resx
+++ b/CustomRPC/UpdatePrompt.bg.resx
@@ -121,7 +121,7 @@
     <value>Да</value>
   </data>
   <data name="buttonNotNow.Text" xml:space="preserve">
-    <value>Отложи</value>
+    <value>Не Сега</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="labelQuestion.Size" type="System.Drawing.Size, System.Drawing">
